[metadata]
name = reveal_yaml
version = attr: reveal_yaml.__version__
description = A YAML, Markdown, reveal.js based Flask application. Supports gh-pages deployment actions.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = yaml,schema,slides,reveal-js,flask-application
license = MIT
author = Yuan Chang
author_email = pyslvs@gmail.com
url = https://kmolyuan.github.io/reveal-yaml
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Software Development :: Libraries :: Application Frameworks
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    pyyaml
    requests
install_requires =
    pyyaml
    requests
    flask
    werkzeug
    jsonschema
    dataset
    argcomplete
    gunicorn; sys_platform != 'win32'

[options.entry_points]
console_scripts =
    rym=reveal_yaml.__main__:main
